--- a/Store/WebContent/css/style.css
+++ b/Store/WebContent/css/style.css
@@ -18,14 +18,15 @@ body{background-color: #f4f4f4;}
 .top_2>.logo{width: 200px;height: 100px;}
 .top_2>.sousuo{position: absolute;top: 20px;right: 130px;}
 .top_2>.sousuo>.sousuo_bac{background-color: red;}
-.top_2>.sousuo>.sousuo_bac input:first-child{margin: 2px;border: 0px;outline: none;padding: 7px 3px;}
-.top_2>.sousuo>.sousuo_bac input:last-child{height: 32px;border: 0px;outline: none;cursor: pointer;background-color: red;color: white;margin-left: -4px;padding: 0px;width: 60px;}
+.top_2>.sousuo>.sousuo_bac input:first-child { margin: 2px;border: 0px; outline: none;padding:7px 3px;width: 500px;line-height:27px;font-size:17px;}
+.top_2>.sousuo>.sousuo_bac input:last-child {height: 32px;border: 0px; outline: none; cursor: pointer; background-color: red;color: white;margin-left: -4px; padding: 0px; width: 90px;font-size: 18px;}
 .top_2>.sousuo>.sousuo_bac input:last-child:hover{background-color:#ff5972}
 .top_2>.sousuo>p>a{text-decoration: none;margin: 0 5px;color: #666;font-size: 13px;}
 .top_2>.sousuo>p>a:hover{color: red;}
+.top_2>.sousuo>p{    margin-top: 7px;}
 /*购物车*/
-.top_2>.Shopping_box{position:absolute;right:5px;top:20px;}
-.top_2>.Shopping_box>.Shopping_btn{cursor: pointer;width: 100px; height: 32px;text-align: center;border: 1px solid #ddd;position: relative;line-height: 32px; color: red;}
+.top_2>.Shopping_box {position: absolute; right: 5px;top: 20px; height: 45px;}
+.top_2>.Shopping_box>.Shopping_btn {cursor: pointer;width: 100px;height: 100%;text-align: center; border: 1px solid #ddd;position: relative;line-height: 45px;color: red;font-size: 18px;}
 .top_2>.Shopping_box>.Shopping_btn:hover{border-color: red;}
 .top_2>.Shopping_box>.Shopping_btn>p{position: absolute;top: 1px;right: 10px;background-color: red;border-radius: 5px;color: white;line-height: 15px;padding: 3px;font-size: 11px;}
 
